- view 페이지 수정 - code 최적화